# ImageEZGen3D

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  STRATEGY.md  app.py  fix_cpu_demo.py  fix_gltf.py  fix_uvs.py  pyproject.toml  requirements.txt  update_exporters.py
.firecrawl/: auth-gate-terms.json  image-apps-2026.json  image-to-3d-research.json
.github/workflows/: ci.yml  forge-mirrors.yml  hf-space.yml  hosted-golden-smoke.yml  release.yml  runtime-artifacts.yml  sync-hf-space.yml
deploy/kubernetes/: deployment.yaml  deployment.yaml.tmpl  service.yaml  service.yaml.tmpl
deploy/nomad/: imageezgen3d.nomad.hcl  imageezgen3d.nomad.hcl.tmpl
deploy/podman/: imageezgen3d.container  imageezgen3d.container.tmpl
requirements/: hunyuan-pins.txt
scripts/: batch_generate.py  check_python_style.py  forge_sync.py  gh_repo_check.py  golden_sample_attestation.py  hf_space_check.py  hf_space_sync.py  hosted_export_tier_smoke.py  hosted_golden_smoke.py  hosted_history_compare_smoke.py  hunyuan_admission_audit.py  hunyuan_admission_g9_enablement_evidence_bundle.py  hunyuan_configured_inference_probe.py  hunyuan_dependency_smoke.py  hunyuan_enablement_evidence_capstones.py  hunyuan_enablement_preflight.py  hunyuan_g1_legal_verify.py  hunyuan_g7_enablement_preflight_bundle.py  hunyuan_g7_hosted_neural_record.py  hunyuan_g7_preflight.py  hunyuan_g8_preflight.py  hunyuan_g9_enablement_evidence_bundle.py  hunyuan_g9_preflight_bundle.py  hunyuan_g9_workstation_bundle.py  hunyuan_gpu_forward_e2e.py  hunyuan_gpu_forward_exports_e2e.py  hunyuan_gpu_forward_probe.py  hunyuan_gpu_forward_workstation_bundle.py  hunyuan_inference_runner_probe.py  hunyuan_neural_enablement_preflight_bundle.py  hunyuan_preflight_bundle.py  hunyuan_resource_estimate.py  hunyuan_tencent_pipeline_probe.py  hunyuan_tier_c_probe.py  hunyuan_tier_c_readiness.py  hunyuan_warm_weights.py  hunyuan_workstation_enablement_preflight.py  hunyuan_workstation_evidence_preflight.py  jobs_api_server.py  poll_job.py  (+32 more)
tests/: test_app.py  test_config.py  test_cpu_demo.py  test_credits.py  test_delivery_exports.py  test_deploy_assets.py  test_export_tiers.py  test_forge_sync.py  test_generation_pipeline.py  test_gh_cli.py  test_golden_sample.py  test_gradio_artifact_layout.py  test_gradio_job_bridge.py  test_gradio_mesh_op_bridge.py  test_hf_cli.py  test_hf_space_sync.py  test_hosted_export_tier_smoke.py  test_hosted_golden_smoke.py  test_hosted_smoke_artifacts.py  test_hosted_validation.py  test_hunyuan_adapter.py  test_hunyuan_admission.py  test_hunyuan_admission_g9_enablement_evidence_bundle.py  test_hunyuan_admission_g9_enablement_evidence_bundle_record.py  test_hunyuan_backend.py  test_hunyuan_ci_artifact_parity.py  test_hunyuan_ci_scripts.py  test_hunyuan_configured_inference.py  test_hunyuan_enablement_evidence_capstones.py  test_hunyuan_enablement_preflight.py  test_hunyuan_g1_g5_scripts.py  test_hunyuan_g7_enablement_preflight_bundle.py  test_hunyuan_g7_hosted_neural_record.py  test_hunyuan_g7_preflight.py  test_hunyuan_g8_preflight.py  test_hunyuan_g9_enablement_evidence_bundle.py  test_hunyuan_g9_preflight_bundle.py  test_hunyuan_g9_workstation_artifact_parity.py  test_hunyuan_g9_workstation_bundle.py  test_hunyuan_g9_workstation_bundle_record.py  (+42 more)
(+467 files in other folders)
