[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageezgen3d"
version = "0.1.0"
description = "Robust gradio scaffold for guided image-to-3D generation workflows."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
  "numpy>=1.26",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
app = ["gradio>=4.44,<7"]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.imageezgen3d]
default_config = "pyproject.toml"

[tool.imageezgen3d.app]
title = "ImageEZGen3D"
output_dir = "outputs"
adapter = "auto"
cpu_adapter = "cpu-demo"
zerogpu_adapter = "hunyuan-zerogpu"

[tool.imageezgen3d.launch]
host = "0.0.0.0"
port = 7860
share = false
queue_max_size = 32
default_concurrency_limit = 1

[tool.imageezgen3d.storage]
retention_runs = 100
keep_failed_runs = true

[tool.imageezgen3d.generation]
seed = 42
quality = "draft"
texture_size = 1024
decimation_target = 500000
preserve_intermediates = true

[tool.imageezgen3d.preprocessing]
target_size = 768
minimum_short_side = 256
maximum_long_side = 4096
blur_edge_variance_threshold = 90.0
low_contrast_threshold = 18.0

[tool.imageezgen3d.runtime]
mode = "auto"
prefer_zerogpu = true
fallback_to_cpu = true
force_cpu = false

[tool.imageezgen3d.zerogpu]
enabled = true
default_duration_seconds = 60
texture_duration_seconds = 180
size = "large"
require_spaces_runtime = true

[tool.imageezgen3d.exports]
default_format = "glb"
formats = ["glb", "obj", "ply", "stl"]

[tool.imageezgen3d.release]
create_missing_targets = true

[tool.imageezgen3d.release.repository]
owner = ""
repo = ""

[tool.imageezgen3d.release.branches]
primary_branch = "main"
fallback_branches = ["master"]
publish_latest_branches = ["main", "master"]

[tool.imageezgen3d.release.tags]
default_image_tag = "latest"
immutable_tag_prefix = "sha"
pr_tag_prefix = "pr"
publish_latest_by_default = true

[tool.imageezgen3d.release.forge.gitlab]
enabled = true
required = false
owner = ""
repo = ""
visibility = "public"
base_url = "https://gitlab.com"

[tool.imageezgen3d.release.forge.codeberg]
enabled = true
required = false
owner = ""
repo = ""
visibility = "public"
base_url = "https://codeberg.org"

[tool.imageezgen3d.release.forge.huggingface]
enabled = true
required = false
owner = ""
repo = "ImageEZGen3D"
repo_type = "space"
space_sdk = "gradio"

[tool.imageezgen3d.release.registry.ghcr]
enabled = true
required = false
namespace = ""
image = ""
registry = "ghcr.io"

[tool.imageezgen3d.release.registry.dockerhub]
enabled = false
required = false
namespace = ""
image = ""
registry = "docker.io"

[tool.imageezgen3d.release.registry.gitlab]
enabled = false
required = false
namespace = ""
image = ""
registry = "registry.gitlab.com"

[tool.imageezgen3d.release.artifacts]
helm_enabled = true
kubernetes_enabled = true
nomad_enabled = true
podman_enabled = true
attach_to_github_release = true

[tool.pyright]
include = ["app.py", "scripts", "src", "tests"]
exclude = [".venv", "outputs", "tmp"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.unittest]
start_directory = "tests"
pattern = "test_*.py"
